:bug: Fix overflowing text on mod_toplist

--- a/src/assets/css/mod_toplist.css
+++ b/src/assets/css/mod_toplist.css
@@ -22,7 +22,7 @@ div#mod_toplist::after {
     border-right: 0.092vh solid rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
     position: relative;
     right: -15.4vw;
-    top: -13vh;
+    top: -12.7vh;
     height: 0.833vh;
 }
 
@@ -47,11 +47,21 @@ div#mod_toplist i {
 
 table#mod_toplist_table {
     margin: 0px;
-    margin-bottom: 0.2vh;
-    width: 97%;
+    margin-top: 0.2vh;
+    width: 99%;
     padding-left: 0.5vh;
 }
 
-table#mod_toplist_table > td {
+table#mod_toplist_table td:nth-child(2) {
+    max-width: 7vw;
+    min-width: 7vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
+table#mod_toplist_table td:nth-child(3), table#mod_toplist_table td:nth-child(4) {
+    text-align: right;
+        max-width: 2.4vw;
+    min-width: 2.4vw;
 }
